# arstm_backend

./: .env.example  .gitignore  ARSTM_API.postman_collection.json  build.sh  main.py  manage.py  pyproject.toml  rav.yaml  render.yaml  requirements.txt  requirementstxt
academic/: admin.py  models.py  serializers.py  translation.py  urls.py  views.py
academic/migrations/: 0001_initial.py  0002_programtype_regime_alter_program_program_type_and_more.py  0003_increase_slug_max_length.py  0004_remove_meta_fields_from_program.py
analytics/: admin.py  models.py  serializers.py  urls.py  views.py
analytics/migrations/: 0001_initial.py
arstmsource/: asgi.py  settings.py  urls.py  wsgi.py
events/: admin.py  models.py  serializers.py  translation.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_newscategory_alter_newspost_category.py  0003_increase_slug_max_length.py  0004_add_competition_model_and_candidate_role.py
forum/: admin.py  models.py  serializers.py  translation.py  urls.py  views.py
forum/migrations/: 0001_initial.py  0002_initial.py
institution/: admin.py  models.py  serializers.py  translation.py  urls.py  views.py
institution/migrations/: 0001_initial.py  0002_directormessage.py  (+4 more)
interactions/: admin.py  models.py  serializers.py  urls.py  views.py
payments/: admin.py  models.py  serializers.py  urls.py  views.py
shop/: admin.py  models.py  serializers.py  translation.py  urls.py  views.py
users/: admin.py  authentication.py  backends.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
(+24 files in other folders)
