[project]
name = "arstm-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-modeltranslation>=0.20.3",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "python-decouple>=3.8",
    "rav>=0.4.3",
    "whitenoise>=6.12.0",
]
